--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,10 @@
 footer {
-  margin-top: 100px;
   background-color: #232f3e;
   font-size: 16px;
+  margin-top: 200px;
+  bottom: 0;
+
+
 }
 
 li {
