--- a/src/app/product/product-edit/product-edit.component.html
+++ b/src/app/product/product-edit/product-edit.component.html
@@ -1,1 +1,123 @@
-<p>product-edit works!</p>
+<ng-template appPlaceholder></ng-template>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6">
+    <h4 class="my-3 text-center">{{ formTitle }}</h4>
+    <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
+      <div class="mb-3">
+        <label for="category">Category</label>
+        <select
+          name="category"
+          id="category"
+          formControlName="category"
+          class="form-control"
+        >
+          <option
+            *ngFor="let category of categoryValues; let i = index"
+            [value]="category"
+          >
+            {{ category }}
+          </option>
+        </select>
+      </div>
+
+      <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input
+          formControlName="name"
+          type="text"
+          class="form-control"
+          id="productName"
+          placeholder="Watch"
+        />
+
+        <div
+          *ngIf="
+            !productForm.get('name')?.valid &&
+            productForm.get('name')?.touched
+          "
+          class="alert alert-danger"
+        >
+          A valid name is required
+        </div>
+      </div>
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <input
+          formControlName="description"
+          type="text"
+          class="form-control"
+          id="description"
+          placeholder="High quality classic watch"
+        />
+
+        <div
+          *ngIf="
+            !productForm.get('description')?.valid &&
+            productForm.get('description')?.touched
+          "
+          class="alert alert-danger"
+        >
+          A valid description is required
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="price" class="form-label">Price</label>
+        <input
+          formControlName="price"
+          type="number"
+          step="0.01"
+          class="form-control"
+          id="price"
+          placeholder="10.20"
+        />
+
+        <div
+          *ngIf="
+            !productForm.get('price')?.valid &&
+            productForm.get('price')?.touched
+          "
+          class="alert alert-danger"
+        >
+          A valid price is required
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="imageUrl" class="form-label">Image URL</label>
+        <input
+          formControlName="imageUrl"
+          type="url"
+          class="form-control"
+          id="imageUrl"
+          placeholder="https://image.url/the-image"
+        />
+
+        <div
+          *ngIf="
+            !productForm.get('imageUrl')?.valid &&
+            productForm.get('imageUrl')?.touched
+          "
+          class="alert alert-danger"
+        >
+          A valid image URL is required
+        </div>
+      </div>
+
+      <button
+        type="submit"
+        class="btn btn-primary me-2"
+        [disabled]="productForm.status !== 'VALID'"
+      >
+        Submit
+      </button>
+
+      <button type="reset" class="btn btn-danger ms-2" (click)="onCancel()">
+        Cancel
+      </button>
+    </form>
+  </div>
+  <div class="col-3"></div>
+</div>
+<app-loading-spinner *ngIf="loading"></app-loading-spinner>
