--- a/src/app/product/product-item/product-item.component.css
+++ b/src/app/product/product-item/product-item.component.css
@@ -1,4 +1,4 @@
-.card{
+/* .card{
     width : 20rem;
     height : 24rem;
   }
@@ -29,3 +29,47 @@
   #edit-product {
     float: right;
   }
+
+  .card-actions {
+    margin: auto;
+  } */
+
+.card {
+  width: 20rem;
+  /* height: 24rem; */
+}
+
+.product-image {
+  width: 320px;
+  height: 240px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.card-title {
+  color: #484848;
+  font-weight: 400;
+}
+
+.card-title:hover {
+  color: #0d6efd;
+  font-weight: bold;
+}
+
+.card-text {
+  font-size: x-large;
+}
+
+#edit-product {
+  float: right;
+}
+
+.card-actions {
+  margin: auto;
+}
+
+.card-actions > .btn {
+  margin: 1rem 0.5rem;
+}
