--- a/src/app/product/product-item/product-item.component.html
+++ b/src/app/product/product-item/product-item.component.html
@@ -1,3 +1,4 @@
+<ng-template appPlaceholder></ng-template>
 <!-- <div class="card h-100">
     <img
       class="card-img-top img-fluid"
@@ -46,11 +47,11 @@
   </div>
 
   <div class="card-actions">
-    <button class="btn btn-outline-primary" style="" (click)="onEdit()">
+    <button class="btn btn-outline-primary" style="" (click)="onAddToCart()">
       <i class="bi bi-cart-plus"></i>
     </button>
 
-    <button class="btn btn-outline-primary" style="" (click)="onEdit()">
+    <button class="btn btn-outline-primary" style="" (click)="onAddToWishList()">
       <i class="bi bi-suit-heart"></i>
     </button>
 
