--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,1 +1,21 @@
-<p>wishlist works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 text-center">
+      <h3 class="pt-3">Your Wishlist</h3>
+      <div>
+        <button class="btn btn-outline-primary" (click)="onMoveAllToCart()">
+          Move all to Cart
+        </button>
+      </div>
+    </div>
+  </div>
+  <hr style="margin: 2rem;"/>
+  <div class="row">
+    <div
+      *ngFor="let wishlist of wishlists; let i = index"
+      class="col-md-6 col-xl-4 col-12 pt-3 justify-content-around d-flex"
+    >
+      <app-wishlist-item [wishlist]="wishlist" [index]="i"></app-wishlist-item>
+    </div>
+  </div>
+</div>
