--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div
       *ngFor="let wishlist of wishlists; let i = index"
-      class="col-md-6 col-xl-4 col-12 pt-3 justify-content-around d-flex"
+      class=""
     >
       <app-wishlist-item [wishlist]="wishlist" [index]="i"></app-wishlist-item>
     </div>
