--- a/src/app/wishlist/wishlist-item/wishlist-item.component.css
+++ b/src/app/wishlist/wishlist-item/wishlist-item.component.css
@@ -1,37 +1,33 @@
 .wishlist-item {
-    display: flex;
-    width: 350px;
-    height: 100px;
-    border: 0.1px solid #484848;
-    border-radius: 5px;
+  display: flex;
+  border-radius: 5px;
+  background-color: whitesmoke;
+  min-width: 400px;
+  margin: 0.5rem;
 }
 
 .child-item {
-margin: 0rem;
+  margin: 0.5rem 1rem;
 }
-
-.child-item:nth-child(2) {
-    padding: 0.5rem;
-
-}
-
-.card-text {
-    margin: 0.5rem;
-    font-size: 1.5rem;
-    font-weight: 400;
-}
-
 
 .wishlist-img {
-    width: 100px;
-    height: 100px;
-    border-radius: 5px;
+  width: 60px;
+  height: 60px;
+  border-radius: 5px;
 }
 
 .name {
-    color: #484848;
-    font-size: 1.5rem;
-    font-weight: 400;
+  color: #484848;
+  font-size: 1rem;
+  font-weight: 400;
 }
 
-.btn {margin: 0.5rem;}
+.card-text {
+  margin: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.btn {
+  margin: 0.5rem;
+}
