Updated cart item

--- a/src/app/cart/cart-item/cart-item.component.css
+++ b/src/app/cart/cart-item/cart-item.component.css
@@ -1,26 +1,53 @@
-h4, h5 {
-    font-family: 'Roboto', sans-serif;
-    color: #484848;
-    font-weight: 700;
-  }
-  
-  .embed-responsive .card-img-top {
-    object-fit: cover;
-  }
-  
-  #item-price {
-    color: #232F3E;
-  }
-  
-  #item-quantity{
-    float: left;
-  }
-  
-  #item-total-price {
-    float: right;
-  }
-  
-  .confirm {
-    font-weight: bold;
-    font-size: larger;
-  }
+.wishlist-item {
+  display: flex;
+  border-radius: 5px;
+  background-color: whitesmoke;
+  min-width: 400px;
+  margin: 0.5rem;
+}
+
+.child-item {
+  margin: 0.5rem 1rem;
+  width: 8rem;
+}
+
+/* #cart-item-quantity {
+  margin: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+} */
+
+#quantity-label {
+  font-size: 1rem;
+}
+
+#cart-item-quantity {
+  margin: 0.5rem;
+  width: 80px;
+  font-size: 1rem;
+  font-weight: 400;
+  border: none;
+  outline: none;
+}
+
+.wishlist-img {
+  width: 60px;
+  height: 60px;
+  border-radius: 5px;
+}
+
+.name {
+  color: #484848;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.card-text {
+  margin: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.btn {
+  margin: 0.5rem;
+}
