Updated cart ui

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,21 +1,28 @@
 <div class="container">
-    <div class="row">
-      <div class="col-12 text-center">
-        <h3 class="pt-3">Shopping cart</h3>
-      </div>
-    </div>
-  
-    <app-cart-item
-      *ngFor="let cartItem of cartItems; let i = index"
-      [cartItem]="cartItem"
-      [index]="i"
-    ></app-cart-item>
-  
-    <hr />
-    <div class="total-cost pt-2 text-right">
-      <h5>Total : $ {{ totalCost }}</h5>
-      <button (click)="order()" [disabled]="!canOrder" type="button" class="btn btn-primary confirm">
-        Confirm Order
-      </button>
+  <div class="row">
+    <div class="col-12 text-center">
+      <h3 class="pt-3">Shopping cart</h3>
     </div>
   </div>
+
+  <hr style="margin: 2rem" />
+
+  <app-cart-item
+    *ngFor="let cartItem of cartItems; let i = index"
+    [cartItem]="cartItem"
+    [index]="i"
+  ></app-cart-item>
+
+  <hr />
+  <div class="cart-footer">
+    <span>Total : <sup> $ </sup> {{ totalCost }}</span>
+    <button
+      (click)="order()"
+      [disabled]="!canOrder"
+      type="button"
+      class="btn btn-primary confirm"
+    >
+      Checkout
+    </button>
+  </div>
+</div>
