--- a/src/app/product/product-item/product-item.component.html
+++ b/src/app/product/product-item/product-item.component.html
@@ -1,39 +1,5 @@
 <ng-template appPlaceholder></ng-template>
-<!-- <div class="card h-100">
-    <img
-      class="card-img-top img-fluid"
-      [src]="product.imageUrl"
-      alt="Product Image"
-    />
-  
-    <div class="card-body">
-      <h5 class="card-title" role="button" (click)="showProductDetails()">
-        {{ product.name }}
-      </h5>
-      <p class="card-text"><sup>$</sup>{{ product.price }}</p>
-      <p class="card-text font-italic">
-        {{ product.description.substring(0, 65) }}...
-      </p>
-    </div>
-  
-    <button
-      class="btn btn-outline-primary"
-      style="width: 4rem; margin: 0.5rem 0.5rem 0.5rem auto"
-      (click)="onEdit()"
-      *ngIf="canEdit"
-    >
-      Edit
-    </button>
-  </div> -->
-
 <!-- <div class="card">
-  <img
-    class="card-img-top img-fluid"
-    [src]="product.imageUrl"
-    alt="Product Image"
-  /> -->
-
-<div class="card">
   <img class="product-image" [src]="product.imageUrl" alt="Product Image" />
 
   <div class="card-body">
@@ -41,9 +7,6 @@
       {{ product.name }}
     </h5>
     <p class="card-text"><sup>$</sup>{{ product.price }}</p>
-    <!-- <p class="card-text font-italic">
-      {{ product.description.substring(0, 65) }}...
-    </p> -->
   </div>
 
   <div class="card-actions">
@@ -51,7 +14,11 @@
       <i class="bi bi-cart-plus"></i>
     </button>
 
-    <button class="btn btn-outline-primary" style="" (click)="onAddToWishList()">
+    <button
+      class="btn btn-outline-primary"
+      style=""
+      (click)="onAddToWishList()"
+    >
       <i class="bi bi-suit-heart"></i>
     </button>
 
@@ -63,5 +30,24 @@
     >
       <i class="bi bi-pencil"></i>
     </button>
+  </div>
+</div> -->
+
+<div class="card">
+  <img class="product-image" [src]="product.imageUrl" alt="Product Image" />
+
+  <div class="product-text">
+    <div class="product-price"><sup>$</sup>{{ product.price }}</div>
+    <div class="product-name">{{ product.name }}</div>
+  </div>
+  <div class="card-actions">
+    <button class="btn btn-primary" style="" (click)="onAddToCart()">
+      Add to Cart
+    </button>
+
+    <button class="btn btn-outline-primary btn-wishlist" style="" (click)="onAddToWishList()">
+      <i class="bi bi-heart-fill"></i>
+    </button>
+
   </div>
 </div>
