--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a
         class="navbar-brand"
@@ -81,4 +81,83 @@
         </div>
       </div>
     </div>
-  </nav>
+  </nav> -->
+
+<nav class="">
+  <div class="">
+    <div class="nav-top">
+      <a
+        class="nav-top-item nav-brand"
+        routerLink="/"
+        routerLinkActive="active"
+        style="color: #ffa700"
+        >Web-Shop</a
+      >
+
+      <div class="nav-top-item nav-search">
+        <input type="text" class="search-input" placeholder="search..." />
+        <i class="bi bi-search icon-search"></i>
+      </div>
+      <div class="nav-top-item">
+        <div>
+          <a
+            class="icon-cart nav-link"
+            aria-current="page"
+            routerLink="/cart"
+            routerLinkActive="active"
+            ><i class="bi bi-cart-fill"></i
+          ></a>
+        </div>
+
+        <div>
+          <a
+            class="icon-account nav-link"
+            aria-current="page"
+            routerLink="/auth"
+            routerLinkActive="active"
+            ><i class="bi bi-person-circle"></i> John Doe</a
+          >
+        </div>
+      </div>
+    </div>
+
+    <div class="nav-sidebar">
+      <i class="bi bi-list" id="icon-menu" (click)="onShowMenu()"></i>
+      <i
+        class="bi bi-x-square-fill item-hide"
+        id="icon-close"
+        (click)="onHideMenu()"
+      ></i>
+      <div id="sidebar-navs" class="item-hide">
+        <div class="sidebar-nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            routerLink="/admin/categories"
+            routerLinkActive="active"
+            >Categories</a
+          >
+        </div>
+        <div class="sidebar-nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            routerLink="/admin/products"
+            routerLinkActive="active"
+            >Products</a
+          >
+        </div>
+
+        <div class="sidebar-nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            routerLink="/wishlist"
+            routerLinkActive="active"
+            >Wishlist</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
