--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,95 @@
 body {
-    height: 100%;
-    min-height: 100%;
+  height: 100%;
+  min-height: 100%;
+}
+
+.wrapper {
+  display: flex;
+}
+
+.nav-link {
+  color: #ffa700;
+}
+
+.nav-link:hover {
+  color: #ffa6006b;
+}
+
+.nav-sidebar {
+  position: relative;
+  padding: 1em;
+  width: 10em;
+  font-weight: 400;
+  font-size: 1.2em;
+  background-color: #072f5f0c;
+}
+
+.sidebar-navs {
+  position: absolute;
+}
+
+#icon-close {
+  color: #072f5f;
+  font-size: 1.5em;
+  position: absolute;
+}
+
+#icon-menu {
+  color: #072f5f;
+  font-size: 2em;
+  position: absolute;
+}
+
+.sidebar-nav-item {
+  border-radius: 2.5px;
+  margin: 0.2em 0;
+  padding: 0.2em;
+}
+
+.sidebar-nav-item > a {
+  color: #072f5f;
+  height: 2em;
+  border-radius: 2.5px;
+}
+
+.sidebar-nav-item > a:hover {
+  color: #072f5f75;
+  font-size: 1em;
+  font-weight: 500;
+}
+
+/* .sidebar-nav-item > a:active {
+  color: #072f5f75;
+  font-size: 1em;
+  font-weight: 500;
+} */
+
+.menu-btn-hide {
+  left: -1em;
+  transition: left 2s;
+}
+
+.menu-btn-show {
+  left: 1em;
+  transition: left 2s;
+}
+
+.close-btn-hide {
+  left: -2em;
+  transition: left 2s;
+}
+
+.close-btn-show {
+  left: 5em;
+  transition: left 2s;
+}
+
+.navs-hide {
+  left: -6em;
+  transition: left 2s;
+}
+
+.navs-show {
+  left: 2em;
+  transition: left 2s;
 }
