--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,47 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <div class="nav-sidebar">
+    <i
+      class="bi bi-list menu-btn-show"
+      id="icon-menu"
+      (click)="onShowMenu()"
+    ></i>
+    <i
+      class="bi bi-x-square-fill close-btn-hide"
+      id="icon-close"
+      (click)="onHideMenu()"
+    ></i>
+    <div id="sidebar-navs" class="sidebar-navs navs-hide">
+      <div class="sidebar-nav-item">
+        <a
+          class="nav-link"
+          aria-current="page"
+          routerLink="/admin/categories"
+          routerLinkActive="active"
+          >Categories</a
+        >
+      </div>
+      <div class="sidebar-nav-item">
+        <a
+          class="nav-link"
+          aria-current="page"
+          routerLink="/admin/products"
+          routerLinkActive="active"
+          >Products</a
+        >
+      </div>
+
+      <div class="sidebar-nav-item">
+        <a
+          class="nav-link"
+          aria-current="page"
+          routerLink="/wishlist"
+          routerLinkActive="active"
+          >Wishlist</a
+        >
+      </div>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
