Updated product UI

--- a/src/app/product/product-item/product-item.component.html
+++ b/src/app/product/product-item/product-item.component.html
@@ -41,11 +41,11 @@
     <div class="product-name">{{ product.name }}</div>
   </div>
   <div class="card-actions">
-    <button class="btn btn-primary" style="" (click)="onAddToCart()">
+    <button class="btn-cart" style="" (click)="onAddToCart()">
       Add to Cart
     </button>
 
-    <button class="btn btn-outline-primary btn-wishlist" style="" (click)="onAddToWishList()">
+    <button class="btn-wishlist" style="" (click)="onAddToWishList()">
       <i class="bi bi-heart-fill"></i>
     </button>
 
