--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,8 @@
       </div>
     </div>
   </div>
-  <router-outlet></router-outlet>
+  <div class="main-container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
 <app-footer></app-footer>
