--- a/src/app/product/product-item/product-item.component.css
+++ b/src/app/product/product-item/product-item.component.css
@@ -1,4 +1,3 @@
-
 .card {
   border: none;
   background-color: whitesmoke;
@@ -32,13 +31,36 @@
 }
 
 .product-name:hover {
-  color: #0d6efd;
+  color: #072f5f;
   font-weight: bold;
 }
 
 .btn-wishlist {
   position: absolute;
- top: 0;
+  font-size: 1.5em;
+  top: 0.5em;
+  right: 0.5em;
+  /* color: #072f5f; */
+  color: red;
+  background: none;
+  border: none;
+}
+
+.btn-cart {
+  width: 150px;
+  height: 40px;
+  display: block;
+  border-radius: 5px;
+  border: none;
+  margin: auto;
+  background-color: #072f5f;
+  color: #ffa700;
+  font-weight: 400;
+  font-size: 1em;
+}
+
+.btn-cart:hover {
+  color: #ffa6006b;
 }
 
 a {
