--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row">
       <div class="col-12 text-center">
         <h3 class="pt-3">Our Products</h3>
@@ -15,4 +15,20 @@
         <app-product-item [product]="product" [index]="i"></app-product-item>
       </div>
     </div>
+  </div> -->
+
+<div class="wrapper">
+  <div class="product-list-header">
+    <h3 class="product-list-heading">Our Products</h3>
+
+    <button class="btn-add-product" (click)="onAddProduct()">
+      Add Product
+    </button>
   </div>
+
+<div class="products-container">
+  <div *ngFor="let product of products; let i = index" class="">
+    <app-product-item [product]="product" [index]="i"></app-product-item>
+  </div>
+</div>
+</div>
